Wed Mar 10 11:18:13 1999  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.2.0.

	* Fixed STDC ifdefs for C++.  Thanks Eric.

Tue Mar  9 14:26:11 1999  Gray Watson  <gray@burger.letters.com>

	* Fixed some problems with threading and the LOG_THREAD_ID ifdef.

	* Improved the memory table output.  Renamed the table files to be
	dmalloc_tab.[ch] to removed clash with libtable.a.

Mon Mar  8 10:50:12 1999  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.2.0-beta.

	* Fixed long standing problem with the NEVER-REUSE token.

	* Added memory tracking function so the user can register a
	callback function to be run whenever a memory transaction occurs.

Sun Mar  7 17:58:07 1999  Gray Watson  <gray@burger.letters.com>

	* Added DUMP_UNFREED_SUMMARY_ONLY variable to the settings.dist
	file.

	* Added MEMORY_TABLE_SIZE and MEMORY_TABLE_LOG variables to the
	settings.dist file.

	* Fixed problem with valloc exposed by moving to random() from
	rand().  Grrr.

	* Added memory table code for grouping of allocated and non-freed
	memory.  Looks great!

Thu Mar  4 19:28:45 1999  Gray Watson  <gray@whopper.letters.com>

	* Removed a number of static variables for string buffers.  Yuck.

	* Removed PERMISSION file and all references to commercial-ness.

	* Moved to internal sprintf code for snprintf, etc..

	* Added dmalloc_message to the exported list of functions.  Had to
	add stdarg.h handling to dmalloc.h.

Fri Dec 11 00:04:04 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.2.

	* Fixed really bad bug which basically killed pthread support.

Mon Nov 16 11:51:39 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.1.

	* Fixed signal autoconfiguration.  Bad dog.

	* Releasing dmalloc version 4.1.0.

Thu Nov 12 10:08:58 1998  Gray Watson  <gray@burger.letters.com>

	* Added HTML versions of the manuals to the releases.

	* Added FREED_POINTER_DELAY in settings.h which will hold a